<?xml version="1.0"?>
<package format="3">
  <name>fr3_moveit_servo</name>
  <version>0.0.1</version>
  <description>MoveIt Servo config for Franka FR3 on Orin.</description>

  <maintainer email="you@example.com">ygw</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行时依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>franka_fr3_moveit_config</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
